--- a/statics/index.html
+++ b/statics/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Myproject</title>
+  <title>RetailApp</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +12,5 @@
 <link rel="stylesheet" href="styles.css"></head>
 <body>
   <app-root></app-root>
-  <input type="hidden" name="csrfmiddlewaretoken" value="nothing">
 <script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
